implemented first pass at mainPage

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
         <script src="app.js"></script>
     </head>
     <body>
-
-        <h1>This is my app</h1>
+        <div id="mainPage">
+            <img id="logo" src="images/doornboschbros_logo.png" />
+            <div id="buttonGroup">
+                <button type="button" class="stackedButton">flowers</button>
+                <button type="button" class="stackedButton">fundraising</button>
+                <button type="button" class="stackedButton">about us</button>
+            </div>
+        </div>
 
 <!--
         <div class="container">
