added intro animations

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <script src="app.js"></script>
     </head>
     <body>
-        <div id="mainPage">
-            <img id="logo" src="images/doornboschbros_logo.png" />
+        <div id="mainPage" >
+            <div id="header">
+                <img id="logo" src="images/doornboschbros_logo.png" />
+            </div>
             <div id="buttonGroup">
                 <button type="button" class="stackedButton">flowers</button>
                 <button type="button" class="stackedButton">fundraising</button>
