setup blur effect

--- a/index.html
+++ b/index.html
@@ -11,14 +11,24 @@
         <script src="app.js"></script>
     </head>
     <body>
-        <div id="mainPage" >
+        <div id="bg" >
             <div id="header">
                 <img id="logo" src="images/doornboschbros_logo.png" />
             </div>
-            <div id="buttonGroup">
+<!--             <div id="buttonGroup">
                 <button type="button" class="stackedButton">flowers</button>
                 <button type="button" class="stackedButton">fundraising</button>
                 <button type="button" class="stackedButton">about us</button>
+            </div>
+            <div id="filter">
+
+            </div> -->
+            <div id="search-container">
+                <div id="search-bg"></div>
+                <div id="search">
+                    <h2>Setup your fundraisor today</h2>
+                    <h5><a href="#">How it works »</a></h5>
+                </div>
             </div>
         </div>
 
