fixed blurring so images line up

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div id="search-container">
                 <div id="search-bg"></div>
                 <div id="search">
+                    <img src="images/infographic2.png"/>
                     <h2>Setup your fundraisor today</h2>
                     <h5><a href="#">How it works »</a></h5>
                 </div>
