moved the menu buttons to the top

--- a/index.html
+++ b/index.html
@@ -14,20 +14,18 @@
         <div id="bg" >
             <div id="header">
                 <img id="logo" src="images/doornboschbros_logo.png" />
+                <div id="buttonGroup">
+                    <button type="button" class="menuButton">flowers</button>
+                    <button type="button" class="menuButton">request a package</button>
+                    <button type="button" class="menuButton">about us</button>
+                </div>
             </div>
-<!--             <div id="buttonGroup">
-                <button type="button" class="stackedButton">flowers</button>
-                <button type="button" class="stackedButton">fundraising</button>
-                <button type="button" class="stackedButton">about us</button>
-            </div>
-            <div id="filter">
-
-            </div> -->
             <div id="search-container">
                 <div id="search-bg"></div>
                 <div id="search">
                     <img src="images/infographic2.png"/>
                     <h2>Setup your fundraisor today</h2>
+                    <h2 id="subtext">and make the world a more beautiful place</h2>
                     <h5><a href="#">How it works »</a></h5>
                 </div>
             </div>
