renamed 'search' to 'popup' as it made more sense

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                     <button type="button" class="menuButton">about us</button>
                 </div>
             </div>
-            <div id="search-container">
-                <div id="search-bg"></div>
-                <div id="search">
+            <div id="popup-container">
+                <div id="popup-bg"></div>
+                <div id="popup">
                     <img src="images/infographic2.png"/>
-                    <h2>Setup your fundraisor today</h2>
+                    <h2>Setup your fundraisor today!</h2>
                     <h2 id="subtext">and make the world a more beautiful place</h2>
                     <h5><a href="#">How it works »</a></h5>
                 </div>
