shrunk image size for better dl speed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         
         <link rel="stylesheet" href="css/index.css" />
-        
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 651px) and (max-width: 1000px)" href="css/indexLarge.css" />
         <script data-main="app" src="libs/fallback.min.js"></script>
         <script src="app.js"></script>
     </head>
