--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en-us" ng-app="myApp">
     <head>
         <title>Doornbosch Bros.</title>
+        <meta name="description" content="We provide a unique approach to fundraising through selling flower bulbs. Start making money today and help make our world a more beautiful place at the same time!" />
+        <meta name="viewport" content="initial-scale=1.0,width=device-width,user-scalable=yes" />
         <meta http-equiv="X-UA-Compatible" content="IE=Edge">
         <meta charset="UTF-8">
         
         <link rel="stylesheet" href="css/index.css" />
-        <link rel="stylesheet" type="text/css" media="screen and (min-width: 651px) and (max-width: 1000px)" href="css/indexLarge.css" />
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 701px) and (max-width: 1000px)" href="css/indexLarge.css" />
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 401px) and (max-width: 700px)" href="css/indexMedium.css" />
+        <link rel="stylesheet" type="text/css" media="screen and (max-width: 400px)" href="css/indexMobile.css" />
         <script data-main="app" src="libs/fallback.min.js"></script>
         <script src="app.js"></script>
     </head>
@@ -16,7 +20,7 @@
                 <img id="logo" src="images/doornboschbros_logo.png" />
                 <div id="buttonGroup">
                     <button type="button" class="menuButton">flowers</button>
-                    <button type="button" class="menuButton">request a package</button>
+                    <button type="button" class="menuButton">requests</button>
                     <button type="button" class="menuButton">about us</button>
                 </div>
             </div>
