renamed to 'order'

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div id="buttonGroup">
                 <button type="button" class="menuButton">flowers</button>
-                <button type="button" class="menuButton">requests</button>
+                <button type="button" class="menuButton">order</button>
                 <button type="button" class="menuButton">about us</button>
             </div>
         </div>
